--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Iceland -- Description and travel'
 - !lcc 'G'
+- GITenberg
 title: A Girl's Ride in Iceland
 url: http://www.gutenberg.org/ebooks/26006
